--- a/.config
+++ b/.config
@@ -121,7 +121,7 @@ BR2_KERNEL_MIRROR="https://cdn.kernel.org/pub"
 BR2_GNU_MIRROR="http://ftpmirror.gnu.org"
 BR2_LUAROCKS_MIRROR="http://rocks.moonscript.org"
 BR2_CPAN_MIRROR="http://cpan.metacpan.org"
-BR2_JLEVEL=5
+BR2_JLEVEL=0
 BR2_CCACHE=y
 BR2_CCACHE_DIR="/hdd/brcache"
 BR2_CCACHE_INITIAL_SETUP=""
@@ -251,7 +251,7 @@ BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.9.4"
 BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
-# BR2_TOOLCHAIN_BUILDROOT_FORTRAN is not set
+BR2_TOOLCHAIN_BUILDROOT_FORTRAN=y
 BR2_GCC_ENABLE_LTO=y
 BR2_GCC_ENABLE_OPENMP=y
 BR2_GCC_ENABLE_GRAPHITE=y
