Support for imx libraries

--- a/.config
+++ b/.config
@@ -275,6 +275,7 @@ BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
+BR2_TOOLCHAIN_HAS_FORTRAN=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_THREADS_NPTL=y
@@ -747,21 +748,15 @@ BR2_PACKAGE_GST1_IMX=y
 #
 # imxg2d needs the Vivante 2D libraries
 #
-# BR2_PACKAGE_GST1_IMX_IPU is not set
-
-#
-# mp3encoder needs the i.MX codec binaries
-#
-# BR2_PACKAGE_GST1_IMX_PXP is not set
-
-#
-# uniaudiodec needs the i.MX codec binaries
-#
+BR2_PACKAGE_GST1_IMX_IPU=y
+# BR2_PACKAGE_GST1_IMX_MP3ENCODER is not set
+BR2_PACKAGE_GST1_IMX_PXP=y
+# BR2_PACKAGE_GST1_IMX_UNIAUDIODEC is not set
 
 #
 # imxvpu needs the VPU imxvpuapi library
 #
-# BR2_PACKAGE_GST1_IMX_V4L2VIDEOSRC is not set
+BR2_PACKAGE_GST1_IMX_V4L2VIDEOSRC=y
 BR2_PACKAGE_GST1_LIBAV=y
 BR2_PACKAGE_GST1_RTSP_SERVER=y
 
@@ -1232,7 +1227,83 @@ BR2_PACKAGE_QT5XMLPATTERNS=y
 #
 # BR2_PACKAGE_AM33X_CM3 is not set
 # BR2_PACKAGE_B43_FIRMWARE is not set
-# BR2_PACKAGE_LINUX_FIRMWARE is not set
+BR2_PACKAGE_LINUX_FIRMWARE=y
+
+#
+# Audio firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_INTEL_SST_DSP is not set
+
+#
+# Video firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_I915 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RADEON is not set
+
+#
+# Bluetooth firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_IBT is not set
+
+#
+# WiFi firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6002 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6003 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6004 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_7010 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9170 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9271 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XXX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_5000 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2A is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2B is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V8 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V9 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8688 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8797 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8797 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8801 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8887 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_PCIE8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MEDIATEK_MT7601U is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT61 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX is not set
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL127X=y
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL128X=y
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL18XX=y
+
+#
+# Ethernet firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_BNX2X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T4 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T5 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169 is not set
+
+#
+# DVB firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_AS102 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_DIB0700 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ITETECH_IT9135 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_H5_DRXK is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_XCx000 is not set
 # BR2_PACKAGE_RPI_FIRMWARE is not set
 # BR2_PACKAGE_SUNXI_BOARDS is not set
 # BR2_PACKAGE_TS4900_FPGA is not set
@@ -1276,28 +1347,31 @@ BR2_PACKAGE_EUDEV_ENABLE_HWDB=y
 # BR2_PACKAGE_FIS is not set
 # BR2_PACKAGE_FMTOOLS is not set
 BR2_PACKAGE_FREESCALE_IMX=y
-BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX25_3STACK=y
+# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX25_3STACK is not set
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX27ADS is not set
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX37_3STACK is not set
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX50 is not set
-# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX51 is not set
+BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX51=y
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX53 is not set
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6Q is not set
-BR2_PACKAGE_FREESCALE_IMX_PLATFORM="IMX25_3STACK"
-# BR2_PACKAGE_IMX_CODEC is not set
+BR2_PACKAGE_FREESCALE_IMX_PLATFORM="IMX51"
+BR2_PACKAGE_FREESCALE_IMX_HAS_VPU=y
+BR2_PACKAGE_IMX_CODEC=y
 # BR2_PACKAGE_IMX_KOBS is not set
 # BR2_PACKAGE_IMX_LIB is not set
-# BR2_PACKAGE_IMX_PARSER is not set
-# BR2_PACKAGE_IMX_UUC is not set
+BR2_PACKAGE_IMX_PARSER=y
+BR2_PACKAGE_IMX_UUC=y
+BR2_PACKAGE_IMX_VPU=y
+BR2_PACKAGE_IMX_VPUWRAP=y
+BR2_PACKAGE_FIRMWARE_IMX=y
 
 #
-# imx-vpu needs an i.MX platform with VPU support
+# gpu-amd-bin-mx51 needs a glibc EABI toolchain w/ C++
 #
 
 #
-# imx-vpuwrap needs an i.MX platform with VPU support
+# libz160 needs an EABI toolchain w/ glibc
 #
-# BR2_PACKAGE_FIRMWARE_IMX is not set
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
 # BR2_PACKAGE_GPM is not set
@@ -1332,13 +1406,13 @@ BR2_PACKAGE_LM_SENSORS_ISADUMP=y
 BR2_PACKAGE_LM_SENSORS_ISASET=y
 BR2_PACKAGE_LM_SENSORS_PWMCONFIG=y
 BR2_PACKAGE_LM_SENSORS_SENSORS_DETECT=y
-# BR2_PACKAGE_LSHW is not set
+BR2_PACKAGE_LSHW=y
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
 # BR2_PACKAGE_MALI_T76X is not set
 # BR2_PACKAGE_MDADM is not set
 # BR2_PACKAGE_MEMTESTER is not set
-# BR2_PACKAGE_MINICOM is not set
+BR2_PACKAGE_MINICOM=y
 # BR2_PACKAGE_NANOCOM is not set
 # BR2_PACKAGE_NEARD is not set
 # BR2_PACKAGE_NVME is not set
@@ -1378,7 +1452,7 @@ BR2_PACKAGE_POWERTOP=y
 # BR2_PACKAGE_SISPMCTL is not set
 # BR2_PACKAGE_SMARTMONTOOLS is not set
 # BR2_PACKAGE_SMSTOOLS3 is not set
-# BR2_PACKAGE_SPI_TOOLS is not set
+BR2_PACKAGE_SPI_TOOLS=y
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
 # BR2_PACKAGE_STM32FLASH is not set
@@ -2099,10 +2173,7 @@ BR2_PACKAGE_LIBXMLPP=y
 # BR2_PACKAGE_LIBDVDREAD is not set
 # BR2_PACKAGE_LIBEBML is not set
 # BR2_PACKAGE_LIBHDHOMERUN is not set
-
-#
-# libimxvpuapi needs an i.MX platform with VPU support
-#
+# BR2_PACKAGE_LIBIMXVPUAPI is not set
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
@@ -2291,10 +2362,7 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GTEST is not set
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
 # BR2_PACKAGE_JEMALLOC is not set
-
-#
-# lapack/blas needs a toolchain w/ fortran
-#
+# BR2_PACKAGE_LAPACK is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 BR2_PACKAGE_LIBATOMIC_OPS_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
