Fix for gstreamer audio

--- a/.config
+++ b/.config
@@ -513,7 +513,7 @@ BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VOLUME=y
 #
 # plugins with external dependencies
 #
-# BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA is not set
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
 # BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TREMOR is not set
 # BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG is not set
 # BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OPUS is not set
