--- a/.config
+++ b/.config
@@ -869,7 +869,7 @@ BR2_PACKAGE_MEMSTAT=y
 #
 # BR2_PACKAGE_NMON is not set
 BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
-# BR2_PACKAGE_OPROFILE is not set
+BR2_PACKAGE_OPROFILE=y
 
 #
 # pax-utils needs a toolchain w/ headers >= 3.5
