Added more packages

--- a/.config
+++ b/.config
@@ -2035,7 +2035,7 @@ BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_ACSCCID is not set
 # BR2_PACKAGE_BCM2835 is not set
-# BR2_PACKAGE_C_PERIPHERY is not set
+BR2_PACKAGE_C_PERIPHERY=y
 # BR2_PACKAGE_CCID is not set
 # BR2_PACKAGE_DTC is not set
 # BR2_PACKAGE_HIDAPI is not set
@@ -2079,7 +2079,7 @@ BR2_PACKAGE_LIBSERIAL=y
 BR2_PACKAGE_LIBSERIALPORT=y
 # BR2_PACKAGE_LIBSIGROK is not set
 # BR2_PACKAGE_LIBSIGROKDECODE is not set
-# BR2_PACKAGE_LIBSOC is not set
+BR2_PACKAGE_LIBSOC=y
 BR2_PACKAGE_LIBUSB=y
 BR2_PACKAGE_LIBUSB_COMPAT=y
 # BR2_PACKAGE_LIBUSBGX is not set
@@ -2095,7 +2095,7 @@ BR2_PACKAGE_MTDEV=y
 # ne10 needs a toolchain w/ neon
 #
 # BR2_PACKAGE_NEARDAL is not set
-# BR2_PACKAGE_OWFS is not set
+BR2_PACKAGE_OWFS=y
 # BR2_PACKAGE_PCSC_LITE is not set
 BR2_PACKAGE_TSLIB=y
 # BR2_PACKAGE_URG is not set
@@ -2568,7 +2568,7 @@ BR2_PACKAGE_CAN_UTILS=y
 #
 # ejabberd needs erlang, toolchain w/ C++
 #
-# BR2_PACKAGE_ETHTOOL is not set
+BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_FAIFA is not set
 # BR2_PACKAGE_FASTD is not set
 # BR2_PACKAGE_FCGIWRAP is not set
@@ -2621,7 +2621,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_LFTP is not set
 # BR2_PACKAGE_LIGHTTPD is not set
 # BR2_PACKAGE_LINKNX is not set
-# BR2_PACKAGE_LINKS is not set
+BR2_PACKAGE_LINKS=y
 # BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LINUX_ZIGBEE is not set
 # BR2_PACKAGE_LLDPD is not set
@@ -2752,7 +2752,8 @@ BR2_PACKAGE_TCPING=y
 # BR2_PACKAGE_VTUN is not set
 BR2_PACKAGE_WAVEMON=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
-# BR2_PACKAGE_WIRELESS_TOOLS is not set
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
