--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-g112cc2f-dirty Configuration
+# Buildroot 2017.02.5-g1ef106c-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -124,19 +124,15 @@ BR2_GNU_MIRROR="http://ftpmirror.gnu.org"
 BR2_LUAROCKS_MIRROR="http://rocks.moonscript.org"
 BR2_CPAN_MIRROR="http://cpan.metacpan.org"
 BR2_JLEVEL=0
-BR2_CCACHE=y
-BR2_CCACHE_DIR="/hdd/brcache"
-BR2_CCACHE_INITIAL_SETUP=""
-BR2_CCACHE_USE_BASEDIR=y
-BR2_ENABLE_DEBUG=y
-# BR2_DEBUG_1 is not set
-BR2_DEBUG_2=y
-# BR2_DEBUG_3 is not set
-# BR2_STRIP_strip is not set
-BR2_STRIP_none=y
+# BR2_CCACHE is not set
+# BR2_ENABLE_DEBUG is not set
+BR2_STRIP_strip=y
+# BR2_STRIP_none is not set
+BR2_STRIP_EXCLUDE_FILES=""
+BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_0 is not set
-BR2_OPTIMIZE_1=y
-# BR2_OPTIMIZE_2 is not set
+# BR2_OPTIMIZE_1 is not set
+BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_G is not set
 # BR2_OPTIMIZE_S is not set
@@ -183,19 +179,11 @@ BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
 BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
 BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-codesourcery-arm"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="arm-none-linux-gnueabi"
-# BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY is not set
+BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY=y
 
 #
 # Host GDB Options
 #
-BR2_PACKAGE_HOST_GDB=y
-BR2_PACKAGE_HOST_GDB_TUI=y
-BR2_PACKAGE_HOST_GDB_PYTHON=y
-BR2_PACKAGE_HOST_GDB_SIM=y
-# BR2_GDB_VERSION_7_10 is not set
-BR2_GDB_VERSION_7_11=y
-# BR2_GDB_VERSION_7_12 is not set
-BR2_GDB_VERSION="7.11.1"
 
 #
 # Toolchain Generic Options
@@ -309,7 +297,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/MinimumLaw/ravion-kernel.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/dmitry64/ravion-kernel.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="production-imx51-ravion"
 BR2_LINUX_KERNEL_VERSION="production-imx51-ravion"
 BR2_LINUX_KERNEL_PATCH=""
@@ -395,7 +383,27 @@ BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 # BR2_PACKAGE_ESPEAK is not set
 # BR2_PACKAGE_FAAD2 is not set
 BR2_PACKAGE_FFMPEG_ARCH_SUPPORTS=y
-# BR2_PACKAGE_FFMPEG is not set
+BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_GPL=y
+BR2_PACKAGE_FFMPEG_NONFREE=y
+BR2_PACKAGE_FFMPEG_FFMPEG=y
+# BR2_PACKAGE_FFMPEG_FFPLAY is not set
+# BR2_PACKAGE_FFMPEG_FFSERVER is not set
+# BR2_PACKAGE_FFMPEG_FFPROBE is not set
+# BR2_PACKAGE_FFMPEG_AVRESAMPLE is not set
+# BR2_PACKAGE_FFMPEG_POSTPROC is not set
+# BR2_PACKAGE_FFMPEG_SWSCALE is not set
+BR2_PACKAGE_FFMPEG_ENCODERS="all"
+BR2_PACKAGE_FFMPEG_DECODERS="all"
+BR2_PACKAGE_FFMPEG_MUXERS="all"
+BR2_PACKAGE_FFMPEG_DEMUXERS="all"
+BR2_PACKAGE_FFMPEG_PARSERS="all"
+BR2_PACKAGE_FFMPEG_BSFS="all"
+BR2_PACKAGE_FFMPEG_PROTOCOLS="all"
+BR2_PACKAGE_FFMPEG_FILTERS="all"
+BR2_PACKAGE_FFMPEG_INDEVS=y
+BR2_PACKAGE_FFMPEG_OUTDEVS=y
+BR2_PACKAGE_FFMPEG_EXTRACONF=""
 # BR2_PACKAGE_FLAC is not set
 # BR2_PACKAGE_FLITE is not set
 # BR2_PACKAGE_GMRENDER_RESURRECT is not set
@@ -741,14 +749,14 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 #
 # Compressors and decompressors
 #
-# BR2_PACKAGE_BZIP2 is not set
+BR2_PACKAGE_BZIP2=y
 # BR2_PACKAGE_LZ4 is not set
 # BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
-# BR2_PACKAGE_UNRAR is not set
-# BR2_PACKAGE_XZ is not set
-# BR2_PACKAGE_ZIP is not set
+BR2_PACKAGE_UNRAR=y
+BR2_PACKAGE_XZ=y
+BR2_PACKAGE_ZIP=y
 
 #
 # Debugging, profiling and benchmark
@@ -781,32 +789,44 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_NETSNIFF_NG is not set
 # BR2_PACKAGE_NMON is not set
 BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
-# BR2_PACKAGE_OPROFILE is not set
+BR2_PACKAGE_OPROFILE=y
 # BR2_PACKAGE_PAX_UTILS is not set
-# BR2_PACKAGE_PV is not set
+BR2_PACKAGE_PV=y
 # BR2_PACKAGE_RAMSMP is not set
 # BR2_PACKAGE_RAMSPEED is not set
 
 #
 # rt-tests needs a uClibc or glibc toolchain w/ NPTL, headers >= 3.14, dynamic library
 #
-# BR2_PACKAGE_SPIDEV_TEST is not set
-# BR2_PACKAGE_STRACE is not set
-# BR2_PACKAGE_STRESS is not set
-# BR2_PACKAGE_STRESS_NG is not set
+BR2_PACKAGE_SPIDEV_TEST=y
+BR2_PACKAGE_STRACE=y
+BR2_PACKAGE_STRESS=y
+BR2_PACKAGE_STRESS_NG=y
 # BR2_PACKAGE_SYSDIG is not set
 # BR2_PACKAGE_TINYMEMBENCH is not set
 # BR2_PACKAGE_TRACE_CMD is not set
 BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TRINITY is not set
 # BR2_PACKAGE_UCLIBC_NG_TEST is not set
-# BR2_PACKAGE_VALGRIND is not set
+BR2_PACKAGE_VALGRIND=y
+BR2_PACKAGE_VALGRIND_MEMCHECK=y
+BR2_PACKAGE_VALGRIND_CACHEGRIND=y
+BR2_PACKAGE_VALGRIND_CALLGRIND=y
+BR2_PACKAGE_VALGRIND_HELGRIND=y
+BR2_PACKAGE_VALGRIND_DRD=y
+BR2_PACKAGE_VALGRIND_MASSIF=y
+BR2_PACKAGE_VALGRIND_DHAT=y
+BR2_PACKAGE_VALGRIND_SGCHECK=y
+BR2_PACKAGE_VALGRIND_BBV=y
+BR2_PACKAGE_VALGRIND_LACKEY=y
+BR2_PACKAGE_VALGRIND_NULGRIND=y
 # BR2_PACKAGE_WHETSTONE is not set
 
 #
 # Development tools
 #
-# BR2_PACKAGE_BINUTILS is not set
+BR2_PACKAGE_BINUTILS=y
+# BR2_PACKAGE_BINUTILS_TARGET is not set
 # BR2_PACKAGE_BSDIFF is not set
 # BR2_PACKAGE_BUSTLE is not set
 BR2_PACKAGE_CHECK=y
@@ -825,7 +845,7 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_PKGCONF is not set
 # BR2_PACKAGE_SUBVERSION is not set
-# BR2_PACKAGE_TREE is not set
+BR2_PACKAGE_TREE=y
 
 #
 # Filesystem and flash utilities
@@ -853,7 +873,9 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MTD is not set
 # BR2_PACKAGE_MTOOLS is not set
 # BR2_PACKAGE_NFS_UTILS is not set
-# BR2_PACKAGE_NTFS_3G is not set
+BR2_PACKAGE_NTFS_3G=y
+# BR2_PACKAGE_NTFS_3G_ENCRYPTED is not set
+# BR2_PACKAGE_NTFS_3G_NTFSPROGS is not set
 # BR2_PACKAGE_SIMICSFS is not set
 # BR2_PACKAGE_SP_OOPS_EXTRACT is not set
 # BR2_PACKAGE_SQUASHFS is not set
@@ -930,10 +952,6 @@ BR2_PACKAGE_SOUND_THEME_FREEDESKTOP=y
 #
 # BR2_PACKAGE_GNUPLOT is not set
 # BR2_PACKAGE_JHEAD is not set
-
-#
-# qt5cinex needs an Open(E)GL-capable backend
-#
 # BR2_PACKAGE_RRDTOOL is not set
 
 #
@@ -942,8 +960,8 @@ BR2_PACKAGE_SOUND_THEME_FREEDESKTOP=y
 # BR2_PACKAGE_CEGUI06 is not set
 # BR2_PACKAGE_DIRECTFB is not set
 # BR2_PACKAGE_EFL is not set
-# BR2_PACKAGE_FBDUMP is not set
-# BR2_PACKAGE_FBGRAB is not set
+BR2_PACKAGE_FBDUMP=y
+BR2_PACKAGE_FBGRAB=y
 # BR2_PACKAGE_FB_TEST_APP is not set
 # BR2_PACKAGE_FBTERM is not set
 # BR2_PACKAGE_FBV is not set
@@ -952,7 +970,7 @@ BR2_PACKAGE_SOUND_THEME_FREEDESKTOP=y
 # BR2_PACKAGE_LINUX_FUSION is not set
 # BR2_PACKAGE_MESA3D is not set
 # BR2_PACKAGE_OCRAD is not set
-# BR2_PACKAGE_PSPLASH is not set
+BR2_PACKAGE_PSPLASH=y
 # BR2_PACKAGE_SDL is not set
 # BR2_PACKAGE_SDL2 is not set
 
@@ -961,106 +979,7 @@ BR2_PACKAGE_SOUND_THEME_FREEDESKTOP=y
 #
 # BR2_PACKAGE_QT is not set
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
-BR2_PACKAGE_QT5=y
-BR2_PACKAGE_QT5_VERSION_LATEST=y
-# BR2_PACKAGE_QT5_VERSION_5_6 is not set
-
-#
-# qt53d module needs an OpenGL-capable backend
-#
-BR2_PACKAGE_QT5BASE=y
-BR2_PACKAGE_QT5BASE_CUSTOM_CONF_OPTS=""
-BR2_PACKAGE_QT5BASE_LICENSE_APPROVED=y
-BR2_PACKAGE_QT5BASE_CONFIG_FILE=""
-BR2_PACKAGE_QT5BASE_EXAMPLES=y
-BR2_PACKAGE_QT5BASE_NETWORK=y
-BR2_PACKAGE_QT5BASE_CONCURRENT=y
-BR2_PACKAGE_QT5BASE_SQL=y
-# BR2_PACKAGE_QT5BASE_MYSQL is not set
-# BR2_PACKAGE_QT5BASE_PSQL is not set
-BR2_PACKAGE_QT5BASE_SQLITE_NONE=y
-# BR2_PACKAGE_QT5BASE_SQLITE_QT is not set
-# BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM is not set
-BR2_PACKAGE_QT5BASE_TEST=y
-BR2_PACKAGE_QT5BASE_XML=y
-BR2_PACKAGE_QT5BASE_GUI=y
-BR2_PACKAGE_QT5BASE_WIDGETS=y
-
-#
-# OpenGL support needs an OpenGL-capable backend
-#
-BR2_PACKAGE_QT5BASE_LINUXFB=y
-
-#
-# directfb backend available if directfb is enabled
-#
-
-#
-# X.org XCB backend available if X.org is enabled
-#
-
-#
-# eglfs backend available if OpenGL and EGL are enabled
-#
-BR2_PACKAGE_QT5BASE_DEFAULT_QPA=""
-BR2_PACKAGE_QT5BASE_PRINTSUPPORT=y
-BR2_PACKAGE_QT5BASE_FONTCONFIG=y
-BR2_PACKAGE_QT5BASE_GIF=y
-BR2_PACKAGE_QT5BASE_JPEG=y
-BR2_PACKAGE_QT5BASE_PNG=y
-BR2_PACKAGE_QT5BASE_DBUS=y
-BR2_PACKAGE_QT5BASE_ICU=y
-BR2_PACKAGE_QT5BASE_TSLIB=y
-
-#
-# qt5canvas3d needs an OpenGL-capable backend
-#
-# BR2_PACKAGE_QT5CONNECTIVITY is not set
-BR2_PACKAGE_QT5DECLARATIVE=y
-
-#
-# quick module needs an OpenGL-capable backend
-#
-BR2_PACKAGE_QT5ENGINIO=y
-
-#
-# qt5graphicaleffects needs an OpenGL-capable backend
-#
-BR2_PACKAGE_QT5IMAGEFORMATS=y
-BR2_PACKAGE_QT5LOCATION=y
-BR2_PACKAGE_QT5MULTIMEDIA=y
-
-#
-# qt5quickcontrols needs an OpenGL-capable backend
-#
-
-#
-# qt5quickcontrols2 needs an OpenGL-capable backend
-#
-# BR2_PACKAGE_QT5SCRIPT is not set
-BR2_PACKAGE_QT5SENSORS=y
-BR2_PACKAGE_QT5SERIALBUS=y
-BR2_PACKAGE_QT5SERIALPORT=y
-BR2_PACKAGE_QT5SVG=y
-BR2_PACKAGE_QT5TOOLS=y
-# BR2_PACKAGE_QT5TOOLS_LINGUIST_TOOLS is not set
-BR2_PACKAGE_QT5TOOLS_PIXELTOOL=y
-BR2_PACKAGE_QT5TOOLS_QTDIAG=y
-BR2_PACKAGE_QT5TOOLS_QTPATHS=y
-BR2_PACKAGE_QT5TOOLS_QTPLUGININFO=y
-# BR2_PACKAGE_QT5WEBCHANNEL is not set
-# BR2_PACKAGE_QT5WEBKIT is not set
-# BR2_PACKAGE_QT5WEBSOCKETS is not set
-BR2_PACKAGE_QT5XMLPATTERNS=y
-
-#
-# QT libraries and helper libraries
-#
-# BR2_PACKAGE_GRANTLEE is not set
-# BR2_PACKAGE_QEXTSERIALPORT is not set
-# BR2_PACKAGE_QJSON is not set
-# BR2_PACKAGE_QUAZIP is not set
-# BR2_PACKAGE_QWT is not set
+# BR2_PACKAGE_QT5 is not set
 
 #
 # tekui needs a Lua interpreter and a toolchain w/ threads, dynamic library
@@ -1071,7 +990,6 @@ BR2_PACKAGE_QT5XMLPATTERNS=y
 #
 # midori needs libgtk3 and a glibc toolchain w/ C++, gcc >= 4.9
 #
-# BR2_PACKAGE_QT_WEBKIT_KIOSK is not set
 # BR2_PACKAGE_XKEYBOARD_CONFIG is not set
 
 #
@@ -1083,7 +1001,83 @@ BR2_PACKAGE_QT5XMLPATTERNS=y
 #
 # BR2_PACKAGE_AM33X_CM3 is not set
 # BR2_PACKAGE_B43_FIRMWARE is not set
-# BR2_PACKAGE_LINUX_FIRMWARE is not set
+BR2_PACKAGE_LINUX_FIRMWARE=y
+
+#
+# Audio firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_INTEL_SST_DSP is not set
+
+#
+# Video firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_I915 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RADEON is not set
+
+#
+# Bluetooth firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_IBT is not set
+
+#
+# WiFi firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6002 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6003 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6004 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_7010 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9170 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9271 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XXX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_5000 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2A is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2B is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V8 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V9 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8688 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8797 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8797 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8801 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8887 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_USB8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_PCIE8897 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MEDIATEK_MT7601U is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT61 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX is not set
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL127X=y
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL128X=y
+BR2_PACKAGE_LINUX_FIRMWARE_TI_WL18XX=y
+
+#
+# Ethernet firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_BNX2X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T4 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T5 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169 is not set
+
+#
+# DVB firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_AS102 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_DIB0700 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ITETECH_IT9135 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_H5_DRXK is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_XCx000 is not set
 # BR2_PACKAGE_RPI_FIRMWARE is not set
 # BR2_PACKAGE_SUNXI_BOARDS is not set
 # BR2_PACKAGE_TS4900_FPGA is not set
@@ -1114,8 +1108,8 @@ BR2_PACKAGE_DBUS_TRIGGERD=y
 # BR2_PACKAGE_EEPROG is not set
 BR2_PACKAGE_EUDEV=y
 BR2_PACKAGE_PROVIDES_UDEV="eudev"
-# BR2_PACKAGE_EUDEV_RULES_GEN is not set
-# BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
+BR2_PACKAGE_EUDEV_RULES_GEN=y
+BR2_PACKAGE_EUDEV_ENABLE_HWDB=y
 # BR2_PACKAGE_EVEMU is not set
 # BR2_PACKAGE_EVTEST is not set
 # BR2_PACKAGE_FAN_CTRL is not set
@@ -1148,9 +1142,9 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 # BR2_PACKAGE_GPSD is not set
 # BR2_PACKAGE_GPTFDISK is not set
 # BR2_PACKAGE_GVFS is not set
-# BR2_PACKAGE_HWDATA is not set
+BR2_PACKAGE_HWDATA=y
 # BR2_PACKAGE_HWLOC is not set
-# BR2_PACKAGE_INPUT_EVENT_DAEMON is not set
+BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 # BR2_PACKAGE_INPUT_TOOLS is not set
 # BR2_PACKAGE_IOSTAT is not set
 # BR2_PACKAGE_IPMITOOL is not set
@@ -1162,7 +1156,20 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 # BR2_PACKAGE_LIBUMP is not set
 # BR2_PACKAGE_LINUX_BACKPORTS is not set
 # BR2_PACKAGE_LIRC_TOOLS is not set
-# BR2_PACKAGE_LM_SENSORS is not set
+BR2_PACKAGE_LM_SENSORS=y
+
+#
+# lm-sensors tools
+#
+BR2_PACKAGE_LM_SENSORS_SENSORS=y
+# BR2_PACKAGE_LM_SENSORS_FANCONTROL is not set
+# BR2_PACKAGE_LM_SENSORS_ISADUMP is not set
+# BR2_PACKAGE_LM_SENSORS_ISASET is not set
+# BR2_PACKAGE_LM_SENSORS_PWMCONFIG is not set
+
+#
+# sensors-detect needs perl
+#
 # BR2_PACKAGE_LSHW is not set
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
@@ -1172,7 +1179,7 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 #
 # BR2_PACKAGE_MDADM is not set
 # BR2_PACKAGE_MEMTESTER is not set
-# BR2_PACKAGE_MINICOM is not set
+BR2_PACKAGE_MINICOM=y
 # BR2_PACKAGE_NANOCOM is not set
 # BR2_PACKAGE_NEARD is not set
 # BR2_PACKAGE_NVME is not set
@@ -1194,9 +1201,8 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 # BR2_PACKAGE_POWERTOP is not set
 # BR2_PACKAGE_PPS_TOOLS is not set
 # BR2_PACKAGE_PRU_SOFTWARE_SUPPORT is not set
-# BR2_PACKAGE_PULSEVIEW is not set
 # BR2_PACKAGE_READ_EDID is not set
-# BR2_PACKAGE_RFKILL is not set
+BR2_PACKAGE_RFKILL=y
 # BR2_PACKAGE_RNG_TOOLS is not set
 # BR2_PACKAGE_RPI_USERLAND is not set
 # BR2_PACKAGE_RS485CONF is not set
@@ -1211,7 +1217,7 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 # BR2_PACKAGE_SISPMCTL is not set
 # BR2_PACKAGE_SMARTMONTOOLS is not set
 # BR2_PACKAGE_SMSTOOLS3 is not set
-# BR2_PACKAGE_SPI_TOOLS is not set
+BR2_PACKAGE_SPI_TOOLS=y
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
 # BR2_PACKAGE_STM32FLASH is not set
@@ -1238,7 +1244,7 @@ BR2_PACKAGE_HAS_UDEV=y
 # BR2_PACKAGE_UPOWER is not set
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
-# BR2_PACKAGE_USBMOUNT is not set
+BR2_PACKAGE_USBMOUNT=y
 # BR2_PACKAGE_USBUTILS is not set
 # BR2_PACKAGE_W_SCAN is not set
 # BR2_PACKAGE_WF111 is not set
@@ -1414,7 +1420,7 @@ BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
-# BR2_PACKAGE_LIBLOCKFILE is not set
+BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_LIBNFS is not set
 # BR2_PACKAGE_LIBSYSFS is not set
 # BR2_PACKAGE_LOCKDEV is not set
@@ -2265,7 +2271,7 @@ BR2_PACKAGE_DIALOG=y
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_GNUPG2 is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
-# BR2_PACKAGE_LOCKFILE_PROGS is not set
+BR2_PACKAGE_LOCKFILE_PROGS=y
 # BR2_PACKAGE_LOGROTATE is not set
 # BR2_PACKAGE_LOGSURFER is not set
 # BR2_PACKAGE_PINENTRY is not set
@@ -2282,7 +2288,7 @@ BR2_PACKAGE_TMUX=y
 # BR2_PACKAGE_ACL is not set
 # BR2_PACKAGE_ANDROID_TOOLS is not set
 # BR2_PACKAGE_ATOP is not set
-# BR2_PACKAGE_ATTR is not set
+BR2_PACKAGE_ATTR=y
 BR2_PACKAGE_AUDIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_AUDIT is not set
 # BR2_PACKAGE_CGROUPFS_MOUNT is not set
@@ -2315,7 +2321,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 #
 # BR2_PACKAGE_IPRUTILS is not set
 # BR2_PACKAGE_IRQBALANCE is not set
-# BR2_PACKAGE_KEYUTILS is not set
+BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_KMOD=y
 # BR2_PACKAGE_KVMTOOL is not set
 # BR2_PACKAGE_LXC is not set
@@ -2404,7 +2410,7 @@ BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_ED is not set
 # BR2_PACKAGE_JOE is not set
-# BR2_PACKAGE_MC is not set
+BR2_PACKAGE_MC=y
 # BR2_PACKAGE_NANO is not set
 # BR2_PACKAGE_UEMACS is not set
 
