--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-g1ef106c-dirty Configuration
+# Buildroot 2017.02.5-gcd03160-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -1059,8 +1059,8 @@ BR2_PACKAGE_LINUX_FIRMWARE=y
 # BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX is not set
 # BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX is not set
 BR2_PACKAGE_LINUX_FIRMWARE_TI_WL127X=y
-BR2_PACKAGE_LINUX_FIRMWARE_TI_WL128X=y
-BR2_PACKAGE_LINUX_FIRMWARE_TI_WL18XX=y
+# BR2_PACKAGE_LINUX_FIRMWARE_TI_WL128X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_TI_WL18XX is not set
 
 #
 # Ethernet firmware
@@ -1105,13 +1105,13 @@ BR2_PACKAGE_DBUS_TRIGGERD=y
 # BR2_PACKAGE_DVB_APPS is not set
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EDID_DECODE is not set
-# BR2_PACKAGE_EEPROG is not set
+BR2_PACKAGE_EEPROG=y
 BR2_PACKAGE_EUDEV=y
 BR2_PACKAGE_PROVIDES_UDEV="eudev"
 BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_EUDEV_ENABLE_HWDB=y
 # BR2_PACKAGE_EVEMU is not set
-# BR2_PACKAGE_EVTEST is not set
+BR2_PACKAGE_EVTEST=y
 # BR2_PACKAGE_FAN_CTRL is not set
 # BR2_PACKAGE_FCONFIG is not set
 # BR2_PACKAGE_FIS is not set
@@ -1145,7 +1145,10 @@ BR2_PACKAGE_FIRMWARE_IMX=y
 BR2_PACKAGE_HWDATA=y
 # BR2_PACKAGE_HWLOC is not set
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
-# BR2_PACKAGE_INPUT_TOOLS is not set
+BR2_PACKAGE_INPUT_TOOLS=y
+BR2_PACKAGE_INPUT_TOOLS_INPUTATTACH=y
+BR2_PACKAGE_INPUT_TOOLS_JSCAL=y
+BR2_PACKAGE_INPUT_TOOLS_JSTEST=y
 # BR2_PACKAGE_IOSTAT is not set
 # BR2_PACKAGE_IPMITOOL is not set
 # BR2_PACKAGE_IQVLINUX is not set
@@ -1170,7 +1173,7 @@ BR2_PACKAGE_LM_SENSORS_SENSORS=y
 #
 # sensors-detect needs perl
 #
-# BR2_PACKAGE_LSHW is not set
+BR2_PACKAGE_LSHW=y
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
 
@@ -1235,7 +1238,7 @@ BR2_PACKAGE_SPI_TOOLS=y
 # ti-sgx-um needs the ti-sgx-km driver
 #
 # BR2_PACKAGE_TI_UIM is not set
-# BR2_PACKAGE_TI_UTILS is not set
+BR2_PACKAGE_TI_UTILS=y
 # BR2_PACKAGE_TRIGGERHAPPY is not set
 # BR2_PACKAGE_UBOOT_TOOLS is not set
 # BR2_PACKAGE_UBUS is not set
@@ -1245,7 +1248,7 @@ BR2_PACKAGE_HAS_UDEV=y
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
 BR2_PACKAGE_USBMOUNT=y
-# BR2_PACKAGE_USBUTILS is not set
+BR2_PACKAGE_USBUTILS=y
 # BR2_PACKAGE_W_SCAN is not set
 # BR2_PACKAGE_WF111 is not set
 # BR2_PACKAGE_WIPE is not set
@@ -1572,7 +1575,7 @@ BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBUSBGX is not set
 # BR2_PACKAGE_LIBV4L is not set
-# BR2_PACKAGE_LIBXKBCOMMON is not set
+BR2_PACKAGE_LIBXKBCOMMON=y
 # BR2_PACKAGE_MRAA is not set
 # BR2_PACKAGE_MTDEV is not set
 
@@ -2346,11 +2349,11 @@ BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_UNSCD is not set
 BR2_PACKAGE_UTIL_LINUX=y
 BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-# BR2_PACKAGE_UTIL_LINUX_LIBFDISK is not set
+BR2_PACKAGE_UTIL_LINUX_LIBFDISK=y
 BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
-# BR2_PACKAGE_UTIL_LINUX_LIBSMARTCOLS is not set
+BR2_PACKAGE_UTIL_LINUX_LIBSMARTCOLS=y
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
+BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 # BR2_PACKAGE_UTIL_LINUX_AGETTY is not set
 # BR2_PACKAGE_UTIL_LINUX_BFS is not set
 # BR2_PACKAGE_UTIL_LINUX_CAL is not set
@@ -2360,7 +2363,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_FALLOCATE is not set
 # BR2_PACKAGE_UTIL_LINUX_FDFORMAT is not set
 BR2_PACKAGE_UTIL_LINUX_FSCK=y
-# BR2_PACKAGE_UTIL_LINUX_HWCLOCK is not set
+BR2_PACKAGE_UTIL_LINUX_HWCLOCK=y
 # BR2_PACKAGE_UTIL_LINUX_IPCRM is not set
 # BR2_PACKAGE_UTIL_LINUX_IPCS is not set
 BR2_PACKAGE_UTIL_LINUX_KILL=y
