--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-g1675f16 Configuration
+# Buildroot 2017.02.5-g2c40826 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -2779,7 +2779,7 @@ BR2_TARGET_UBOOT_BOARDNAME="mx51rav"
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 # BR2_TARGET_UBOOT_CUSTOM_HG is not set
 # BR2_TARGET_UBOOT_CUSTOM_SVN is not set
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/MinimumLaw/ravion-uboot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/dmitry64/ravion-uboot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="imx51-ravion"
 BR2_TARGET_UBOOT_VERSION="imx51-ravion"
 BR2_TARGET_UBOOT_PATCH=""
