--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-g1b8dc6e-dirty Configuration
+# Buildroot 2017.02.5-ga9f7f36-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -2545,7 +2545,7 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
 BR2_PACKAGE_BLUEZ_UTILS=y
-# BR2_PACKAGE_BLUEZ_UTILS_COMPAT is not set
+BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
 BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
 BR2_PACKAGE_BLUEZ_UTILS_USB=y
 BR2_PACKAGE_BLUEZ_UTILS_GATT=y
@@ -2632,12 +2632,7 @@ BR2_PACKAGE_IFTOP=y
 #
 # BR2_PACKAGE_IPSEC_TOOLS is not set
 # BR2_PACKAGE_IPSET is not set
-BR2_PACKAGE_IPTABLES=y
-# BR2_PACKAGE_IPTABLES_BPF_NFSYNPROXY is not set
-
-#
-# nftables compat needs a toolchain w/ wchar, dynamic library, headers >= 3.12
-#
+# BR2_PACKAGE_IPTABLES is not set
 # BR2_PACKAGE_IPTRAF_NG is not set
 BR2_PACKAGE_IPUTILS=y
 # BR2_PACKAGE_IRSSI is not set
