--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-ga9f7f36-dirty Configuration
+# Buildroot 2017.02.5-g4854e71-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -499,7 +499,7 @@ BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_PLAYBACK=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE=y
 # BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_SUBPARSE is not set
-# BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP is not set
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TYPEFIND=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOTESTSRC=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEORATE=y
@@ -519,7 +519,7 @@ BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_JPEG=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PNG=y
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_BZ2 is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_BZ2=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_ZLIB=y
 
 #
@@ -527,13 +527,13 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_ZLIB=y
 #
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ALPHA is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_APETAG is not set
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX is not set
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUPARSE is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT is not set
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AVI=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_CUTTER is not set
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEBUGUTILS is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEBUGUTILS=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEINTERLACE is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DTMF is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_EFFECTV is not set
@@ -548,7 +548,7 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLV=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_INTERLEAVE is not set
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ISOMP4=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_LAW is not set
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_LEVEL is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_LEVEL=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MATROSKA=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MONOSCOPE is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MULTIFILE is not set
@@ -572,7 +572,7 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPARSE=y
 #
 # plugins with external dependencies
 #
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_OSS is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_OSS=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_OSS4 is not set
 
 #
@@ -586,7 +586,7 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLAC=y
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SPEEX is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_TAGLIB is not set
 # BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_VPX is not set
-# BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK is not set
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK=y
 BR2_PACKAGE_GST1_PLUGINS_BAD=y
 
 #
@@ -600,16 +600,16 @@ BR2_PACKAGE_GST1_PLUGINS_BAD=y
 #
 # dependency-less plugins
 #
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ACCURIP is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMDEC is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMENC is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AIFF is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ASFMUX is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOFXBAD is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOMIXER is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_COMPOSITOR is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOVISUALIZERS is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUTOCONVERT is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ACCURIP=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMDEC=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMENC=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AIFF=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ASFMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOFXBAD=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOMIXER=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_COMPOSITOR=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOVISUALIZERS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUTOCONVERT=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_BAYER is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_CAMERABIN2 is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_CDXAPARSE is not set
@@ -637,12 +637,12 @@ BR2_PACKAGE_GST1_PLUGINS_BAD=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_JP2KDECIMATOR is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_JPEGFORMAT is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_LIBRFB is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MIDI is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGDEMUX is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSMUX is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGPSMUX is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MVE is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MIDI=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGDEMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGPSMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MVE=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MXF is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NETSIM is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NUVDEMUX is not set
@@ -650,24 +650,24 @@ BR2_PACKAGE_GST1_PLUGINS_BAD=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PATCHDETECT is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PCAPPARSE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PNM is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RAWPARSE is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RAWPARSE=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_REMOVESILENCE is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RTMP is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RTMP=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDI is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDP is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SEGMENTCLIP is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SIREN is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTH is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SPEED is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SUBENC is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTH=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SPEED=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SUBENC=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_STEREO is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_TIMECODE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_TTA is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFILTERS is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFRAME_AUDIOLEVEL is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOMEASURE is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOSIGNAL is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFILTERS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFRAME_AUDIOLEVEL=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOMEASURE=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOSIGNAL=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VMNC is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_Y4M is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_YADIF is not set
@@ -686,7 +686,7 @@ BR2_PACKAGE_GST1_PLUGINS_BAD=y
 # dvb needs a toolchain w/ headers >= 3.7
 #
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FAAD is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FBDEV is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FBDEV=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FDK_AAC is not set
 
 #
@@ -695,7 +695,7 @@ BR2_PACKAGE_GST1_PLUGINS_BAD=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HLS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_KMS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_LIBMMS is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEG2ENC is not set
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEG2ENC=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MUSEPACK is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NEON is not set
 
@@ -823,7 +823,7 @@ BR2_PACKAGE_MPLAYER_MENCODER=y
 # vlc needs a toolchain w/ C++, dynamic library, wchar, threads, headers >= 3.7
 #
 # BR2_PACKAGE_VORBIS_TOOLS is not set
-# BR2_PACKAGE_WAVPACK is not set
+BR2_PACKAGE_WAVPACK=y
 # BR2_PACKAGE_YAVTA is not set
 # BR2_PACKAGE_YMPD is not set
 
@@ -1174,8 +1174,8 @@ BR2_PACKAGE_QT5BASE_CONCURRENT=y
 BR2_PACKAGE_QT5BASE_SQL=y
 # BR2_PACKAGE_QT5BASE_MYSQL is not set
 # BR2_PACKAGE_QT5BASE_PSQL is not set
-BR2_PACKAGE_QT5BASE_SQLITE_NONE=y
-# BR2_PACKAGE_QT5BASE_SQLITE_QT is not set
+# BR2_PACKAGE_QT5BASE_SQLITE_NONE is not set
+BR2_PACKAGE_QT5BASE_SQLITE_QT=y
 # BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM is not set
 BR2_PACKAGE_QT5BASE_TEST=y
 BR2_PACKAGE_QT5BASE_XML=y
@@ -2192,7 +2192,8 @@ BR2_PACKAGE_YAML_CPP=y
 # BR2_PACKAGE_LIBIMXVPUAPI is not set
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
-# BR2_PACKAGE_LIBMPEG2 is not set
+BR2_PACKAGE_LIBMPEG2=y
+BR2_PACKAGE_LIBMPEG2_BINS=y
 BR2_PACKAGE_LIBOGG=y
 BR2_PACKAGE_LIBOPENH264_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBOPENH264 is not set
@@ -2303,7 +2304,7 @@ BR2_PACKAGE_LIBPCAP=y
 # BR2_PACKAGE_QDECODER is not set
 # BR2_PACKAGE_QPID_PROTON is not set
 # BR2_PACKAGE_RABBITMQ_C is not set
-# BR2_PACKAGE_RTMPDUMP is not set
+BR2_PACKAGE_RTMPDUMP=y
 # BR2_PACKAGE_SLIRP is not set
 # BR2_PACKAGE_SNMPPP is not set
 # BR2_PACKAGE_SOFIA_SIP is not set
@@ -3071,11 +3072,11 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_GEN=4
 BR2_TARGET_ROOTFS_EXT2_REV=1
 BR2_TARGET_ROOTFS_EXT2_LABEL="rootfs"
-BR2_TARGET_ROOTFS_EXT2_BLOCKS=0
+BR2_TARGET_ROOTFS_EXT2_BLOCKS=7000000
 BR2_TARGET_ROOTFS_EXT2_INODES=0
-BR2_TARGET_ROOTFS_EXT2_EXTRA_BLOCKS=200000
+BR2_TARGET_ROOTFS_EXT2_EXTRA_BLOCKS=0
 BR2_TARGET_ROOTFS_EXT2_EXTRA_INODES=300000
-BR2_TARGET_ROOTFS_EXT2_RESBLKS=0
+BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
 BR2_TARGET_ROOTFS_EXT2_NONE=y
 # BR2_TARGET_ROOTFS_EXT2_GZIP is not set
 # BR2_TARGET_ROOTFS_EXT2_BZIP2 is not set
