--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.5-g5a62939-dirty Configuration
+# Buildroot 2017.02.5-gc57f93c Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -1154,7 +1154,6 @@ BR2_PACKAGE_QT5BASE_XML=y
 BR2_PACKAGE_QT5BASE_GUI=y
 BR2_PACKAGE_QT5BASE_WIDGETS=y
 # BR2_PACKAGE_QT5BASE_OPENGL is not set
-# BR2_PACKAGE_QT5BASE_OPENGL_ES2 is not set
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 
 #
