--- a/.config
+++ b/.config
@@ -1199,7 +1199,7 @@ BR2_PACKAGE_QT5TOOLS_QTDIAG=y
 BR2_PACKAGE_QT5TOOLS_QTPATHS=y
 BR2_PACKAGE_QT5TOOLS_QTPLUGININFO=y
 BR2_PACKAGE_QT5WEBCHANNEL=y
-BR2_PACKAGE_QT5WEBKIT=y
+# BR2_PACKAGE_QT5WEBKIT is not set
 BR2_PACKAGE_QT5WEBSOCKETS=y
 BR2_PACKAGE_QT5XMLPATTERNS=y
 
