--- a/.config
+++ b/.config
@@ -7,6 +7,10 @@ BR2_HOST_GCC_AT_LEAST_4_5=y
 BR2_HOST_GCC_AT_LEAST_4_6=y
 BR2_HOST_GCC_AT_LEAST_4_7=y
 BR2_HOST_GCC_AT_LEAST_4_8=y
+BR2_HOST_GCC_AT_LEAST_4_9=y
+BR2_HOST_GCC_AT_LEAST_5=y
+BR2_HOST_GCC_AT_LEAST_6=y
+BR2_HOST_GCC_AT_LEAST_7=y
 
 #
 # Target options
@@ -768,9 +772,7 @@ BR2_PACKAGE_KODI_EGL_GLES=y
 # BR2_PACKAGE_MPD_MPC is not set
 BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
-BR2_PACKAGE_MPLAYER=y
-BR2_PACKAGE_MPLAYER_MPLAYER=y
-BR2_PACKAGE_MPLAYER_MENCODER=y
+# BR2_PACKAGE_MPLAYER is not set
 # BR2_PACKAGE_MPV is not set
 # BR2_PACKAGE_MULTICAT is not set
 BR2_PACKAGE_MUSEPACK=y
@@ -1153,7 +1155,9 @@ BR2_PACKAGE_QT5BASE_TEST=y
 BR2_PACKAGE_QT5BASE_XML=y
 BR2_PACKAGE_QT5BASE_GUI=y
 BR2_PACKAGE_QT5BASE_WIDGETS=y
-# BR2_PACKAGE_QT5BASE_OPENGL is not set
+BR2_PACKAGE_QT5BASE_OPENGL=y
+BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
+BR2_PACKAGE_QT5BASE_OPENGL_LIB=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 
 #
@@ -1163,7 +1167,7 @@ BR2_PACKAGE_QT5BASE_LINUXFB=y
 #
 # X.org XCB backend available if X.org is enabled
 #
-# BR2_PACKAGE_QT5BASE_EGLFS is not set
+BR2_PACKAGE_QT5BASE_EGLFS=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="linuxfb"
 BR2_PACKAGE_QT5BASE_PRINTSUPPORT=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
