--- a/.config
+++ b/.config
@@ -482,11 +482,16 @@ BR2_PACKAGE_FLAC=y
 # BR2_PACKAGE_GMRENDER_RESURRECT is not set
 # BR2_PACKAGE_GSTREAMER is not set
 BR2_PACKAGE_GSTREAMER1=y
+# BR2_PACKAGE_GSTREAMER1_CHECK is not set
 # BR2_PACKAGE_GSTREAMER1_PARSE is not set
 # BR2_PACKAGE_GSTREAMER1_TRACE is not set
 # BR2_PACKAGE_GSTREAMER1_GST_DEBUG is not set
 BR2_PACKAGE_GSTREAMER1_PLUGIN_REGISTRY=y
 BR2_PACKAGE_GSTREAMER1_INSTALL_TOOLS=y
+
+#
+# gstreamer1-mm needs a toolchain w/ C++, wchar, threads, gcc >= 4.9
+#
 BR2_PACKAGE_GST1_PLUGINS_BASE=y
 
 #
@@ -502,6 +507,7 @@ BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_PLAYBACK=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE=y
+# BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_RAWPARSE is not set
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_SUBPARSE=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TYPEFIND=y
@@ -606,19 +612,17 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMDEC=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ADPCMENC=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AIFF is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ASFMUX is not set
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOBUFFERSPLIT is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOFXBAD=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOMIXER=y
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOMIXMATRIX is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_COMPOSITOR is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUDIOVISUALIZERS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_AUTOCONVERT is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_BAYER is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_CAMERABIN2 is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_CDXAPARSE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_COLOREFFECTS is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DATAURISRC is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DCCP is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DEBUGUTILS=y
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DTLS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DVBSUBOVERLAY is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DVDSPU is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FACEOVERLAY is not set
@@ -629,7 +633,6 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FESTIVAL=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_GAUDIEFFECTS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_GEOMETRICTRANSFORM is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_GDP is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HDVPARSE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ID3TAG is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_INTER is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_INTERLACE is not set
@@ -643,18 +646,14 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGDEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSMUX=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGPSMUX=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MVE=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MXF=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NETSIM is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NUVDEMUX is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ONVIF is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PATCHDETECT is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PCAPPARSE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_PNM is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RAWPARSE=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_REMOVESILENCE=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RTMP=y
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDI is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDP is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SEGMENTCLIP is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SIREN is not set
@@ -663,10 +662,9 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SPEED=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SUBENC=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_STEREO=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_TIMECODE=y
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_TTA is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFILTERS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOFRAME_AUDIOLEVEL=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOMEASURE=y
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_IQA is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOSIGNAL=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VMNC is not set
@@ -676,7 +674,6 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOSIGNAL=y
 #
 # plugins with external dependencies
 #
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_APEXSINK is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_ASSRENDER is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_BZ2 is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_CURL is not set
@@ -696,6 +693,8 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FDK_AAC=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HLS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_KMS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_LIBMMS=y
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DTLS is not set
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_TTML is not set
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEG2ENC=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MUSEPACK=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NEON=y
@@ -708,7 +707,6 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPENJPEG=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RSVG is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SBC is not set
-# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDL is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SHM is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SNDFILE is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SRTP is not set
@@ -733,21 +731,23 @@ BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 #
 # BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_DVDREAD is not set
 # BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_LAME is not set
-BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MAD=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPG123=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPEG2DEC=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_X264=y
 # BR2_PACKAGE_GST1_IMX is not set
+# BR2_PACKAGE_GST1_INTERPIPE is not set
 BR2_PACKAGE_GST1_LIBAV=y
 # BR2_PACKAGE_GST1_RTSP_SERVER is not set
 
 #
 # gst1-validate depends on python
 #
+# BR2_PACKAGE_GST1_VAAPI is not set
 
 #
 # gst-omx requires a OpenMAX implementation
 #
+# BR2_PACKAGE_GSTREAMER1_EDITING_SERVICES is not set
 # BR2_PACKAGE_JACK2 is not set
 BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
 
@@ -773,7 +773,7 @@ BR2_PACKAGE_KODI_EGL_GLES=y
 BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MPLAYER is not set
-# BR2_PACKAGE_MPV is not set
+BR2_PACKAGE_MPV=y
 # BR2_PACKAGE_MULTICAT is not set
 BR2_PACKAGE_MUSEPACK=y
 # BR2_PACKAGE_NCMPC is not set
@@ -854,7 +854,7 @@ BR2_PACKAGE_LSOF=y
 #
 # BR2_PACKAGE_NMON is not set
 BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
-# BR2_PACKAGE_OPROFILE is not set
+BR2_PACKAGE_OPROFILE=y
 
 #
 # pax-utils needs a toolchain w/ headers >= 3.5
@@ -1367,11 +1367,17 @@ BR2_PACKAGE_FREESCALE_IMX=y
 BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX51=y
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX53 is not set
 # BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6Q is not set
+# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6S is not set
+# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6UL is not set
+# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX7 is not set
+# BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX8M is not set
 BR2_PACKAGE_FREESCALE_IMX_PLATFORM="IMX51"
 BR2_PACKAGE_FREESCALE_IMX_HAS_VPU=y
+# BR2_PACKAGE_IMX_ALSA_PLUGINS is not set
 BR2_PACKAGE_IMX_CODEC=y
 # BR2_PACKAGE_IMX_KOBS is not set
 # BR2_PACKAGE_IMX_LIB is not set
+# BR2_PACKAGE_IMX_M4FWLOADER is not set
 BR2_PACKAGE_IMX_PARSER=y
 # BR2_PACKAGE_IMX_UUC is not set
 BR2_PACKAGE_IMX_VPU=y
